--- a/css/style.css
+++ b/css/style.css
@@ -154,6 +154,7 @@ nav ul
 				padding:.25em 4px;
 				background: none;
 
+				color:#171718;
 				font-family: 'RedHatDisplay', sans-serif;
 				font-weight: 600;
 
