--- a/css/work.css
+++ b/css/work.css
@@ -114,6 +114,11 @@ video.center-vid
     }
 
 
+	.youtube-container { position: relative; padding-bottom: 56.25%; padding-top:0; height: 0; overflow: hidden; margin:0 auto 1rem;}
+	.youtube-container iframe, .video-container object, .video-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
+
+
+
 .project-copy
 {
 	max-width:880px;
