--- a/test/css/fonts.css
+++ b/test/css/fonts.css
@@ -1,112 +1,112 @@
 @font-face {
     font-family: 'Metropolis';
-    src: url('font/Metropolis-Black.ttf') format('woff2'),
-	url('font/Metropolis-Black.ttf') format('woff');
+    src: url('../css/fonts/Metropolis-Black.woff2') format('woff2'),
+	url('../css/fonts/Metropolis-Black.woff') format('woff');
 	font-weight: 800;
   	font-style: normal;
 }
 @font-face {
     font-family: 'Metropolis';
-    src: url('font/Metropolis-ExtraBold.ttf') format('woff2'),
-	url('font/Metropolis-ExtraBold.ttf') format('woff');
+    src: url('../css/fonts/Metropolis-ExtraBold.woff2') format('woff2'),
+	url('../css/fonts/Metropolis-ExtraBold.woff') format('woff');
 	font-weight: 700;
   	font-style: normal;
 }
 @font-face {
     font-family: 'Metropolis';
-    src: url('font/Metropolis-Bold.ttf') format('woff2'),
-	url('font/Metropolis-Bold.ttf') format('woff');
+    src: url('../css/fonts/Metropolis-Bold.woff2') format('woff2'),
+	url('../css/fonts/Metropolis-Bold.woff') format('woff');
 	font-weight: 600;
   	font-style: normal;
 }
 @font-face {
     font-family: 'Metropolis';
-    src: url('font/Metropolis-SemiBold.ttf') format('woff2'),
-	url('font/Metropolis-SemiBold.ttf') format('woff');
+    src: url('../css/fonts/Metropolis-SemiBold.woff2') format('woff2'),
+	url('../css/fonts/Metropolis-SemiBold.woff') format('woff');
 	font-weight: 500;
   	font-style: normal;
 }
 @font-face {
     font-family: 'Metropolis';
-    src: url('font/Metropolis-Medium.ttf') format('woff2'),
-	url('font/Metropolis-Medium.ttf') format('woff');
+    src: url('../css/fonts/Metropolis-Medium.woff2') format('woff2'),
+	url('../css/fonts/Metropolis-Medium.woff') format('woff');
 	font-weight: 400;
   	font-style: normal;
 }
 @font-face {
     font-family: 'Metropolis';
-    src: url('font/Metropolis-Regular.ttf') format('woff2'),
-	url('font/Metropolis-Regular.ttf') format('woff');
+    src: url('../css/fonts/Metropolis-Regular.woff2') format('woff2'),
+	url('../css/fonts/Metropolis-Regular.woff') format('woff');
 	font-weight: 300;
   	font-style: normal;
 }
 @font-face {
     font-family: 'Metropolis';
-    src: url('font/Metropolis-Light.ttf') format('woff2'),
-	url('font/Metropolis-Light.ttf') format('woff');
+    src: url('../css/fonts/Metropolis-Light.woff2') format('woff2'),
+	url('../css/fonts/Metropolis-Light.woff') format('woff');
 	font-weight: 200;
   	font-style: normal;
 }
 @font-face {
     font-family: 'Metropolis';
-    src: url('font/Metropolis-Thin.ttf') format('woff2'),
-	url('font/Metropolis-Thin.ttf') format('woff');
+    src: url('../css/fonts/Metropolis-Thin.woff2') format('woff2'),
+	url('../css/fonts/Metropolis-Thin.woff') format('woff');
 	font-weight: 100;
   	font-style: normal;
 }
 @font-face {
     font-family: 'Metropolis';
-    src: url('font/Metropolis-BlackItalic.ttf') format('woff2'),
-	url('font/Metropolis-BlackItalic.ttf') format('woff');
+    src: url('../css/fonts/Metropolis-BlackItalic.woff2') format('woff2'),
+	url('../css/fonts/Metropolis-BlackItalic.woff') format('woff');
 	font-weight: 800;
   	font-style: italic;
 }
 @font-face {
     font-family: 'Metropolis';
-    src: url('font/Metropolis-ExtraBoldItalic.ttf') format('woff2'),
-	url('font/Metropolis-ExtraBoldItalic.ttf') format('woff');
+    src: url('../css/fonts/Metropolis-ExtraBoldItalic.woff2') format('woff2'),
+	url('../css/fonts/Metropolis-ExtraBoldItalic.woff') format('woff');
 	font-weight: 700;
   	font-style: italic;
 }
 @font-face {
     font-family: 'Metropolis';
-    src: url('font/Metropolis-BoldItalic.ttf') format('woff2'),
-	url('font/Metropolis-BoldItalic.ttf') format('woff');
+    src: url('../css/fonts/Metropolis-BoldItalic.woff2') format('woff2'),
+	url('../css/fonts/Metropolis-BoldItalic.woff') format('woff');
 	font-weight: 600;
   	font-style: italic;
 }
 @font-face {
     font-family: 'Metropolis';
-    src: url('font/Metropolis-SemiBoldItalic.ttf') format('woff2'),
-	url('font/Metropolis-SemiBoldItalic.ttf') format('woff');
+    src: url('../css/fonts/Metropolis-SemiBoldItalic.woff2') format('woff2'),
+	url('../css/fonts/Metropolis-SemiBoldItalic.woff') format('woff');
 	font-weight: 500;
   	font-style: italic;
 }
 @font-face {
     font-family: 'Metropolis';
-    src: url('font/Metropolis-MediumItalic.ttf') format('woff2'),
-	url('font/Metropolis-MediumItalic.ttf') format('woff');
+    src: url('../css/fonts/Metropolis-MediumItalic.woff2') format('woff2'),
+	url('../css/fonts/Metropolis-MediumItalic.woff') format('woff');
 	font-weight: 400;
   	font-style: italic;
 }
 @font-face {
     font-family: 'Metropolis';
-    src: url('font/Metropolis-RegularItalic.ttf') format('woff2'),
-	url('font/Metropolis-RegularItalic.ttf') format('woff');
+    src: url('../css/fonts/Metropolis-RegularItalic.woff2') format('woff2'),
+	url('../css/fonts/Metropolis-RegularItalic.woff') format('woff');
 	font-weight: 300;
   	font-style: italic;
 }
 @font-face {
     font-family: 'Metropolis';
-    src: url('font/Metropolis-LightItalic.ttf') format('woff2'),
-	url('font/Metropolis-LightItalic.ttf') format('woff');
+    src: url('../css/fonts/Metropolis-LightItalic.woff2') format('woff2'),
+	url('../css/fonts/Metropolis-LightItalic.woff') format('woff');
 	font-weight: 200;
   	font-style: italic;
 }
 @font-face {
     font-family: 'Metropolis';
-    src: url('font/Metropolis-ThinItalic.ttf') format('woff2'),
-	url('font/Metropolis-ThinItalic.ttf') format('woff');
+    src: url('../css/fonts/Metropolis-ThinItalic.woff2') format('woff2'),
+	url('../css/fonts/Metropolis-ThinItalic.woff') format('woff');
 	font-weight: 100;
-  	font-style: normal;
+  	font-style: italic;
 }
