--- a/test/css/style.less
+++ b/test/css/style.less
@@ -1,4 +1,4 @@
-@import "../css/fonts.css";
+@import "fonts.css";
 @import "normalize.css";
 @import "font-awesome/font-awesome.css";
 
@@ -70,6 +70,122 @@
 	}
 }
 
+.rh-name
+{
+	color:@white;
+	font-size: 1rem;	
+	font-weight: 600;
+	letter-spacing: .25rem;
+	text-decoration: none;			
+	text-transform: uppercase;
+}
+
+
+//--------------------------------------KeyFrames
+
+@keyframes anim-noise {
+	0%, 100% { background-position:0, 0 }
+	10% { background-position:-5%, -10% }
+	20% { background-position:-15%, 5% }
+	30% { background-position:7%, -25% }
+	40% { background-position:-5%, 25% }
+	50% { background-position:-15%, 10% }
+	60% { background-position:15%, 0% }
+	70% { background-position:0%, 15% }
+	80% { background-position:3%, 35% }
+	90% { background-position:-10%, 10% }
+ }
+ @keyframes anim-loader {
+	0% { transform: rotateX(0) rotateY(0) rotateZ(0);}
+	10% { transform: rotateX(180deg) rotateY(0) rotateZ(0);}
+	20% { transform: rotateX(0) rotateY(0) rotateZ(0);}
+	35% { transform: rotateX(0) rotateY(180deg) rotateZ(0);}
+	50% { transform: rotateX(0) rotateY(0) rotateZ(0);}
+	75% { transform: rotateX(0) rotateY(0) rotateZ(180deg);}
+	100% { transform: rotateX(0) rotateY(0) rotateZ(360deg);}
+ }
+
+
+
+@keyframes text-glow
+{
+	from
+	{
+		text-shadow:0 0 0px rgba(255,255,255,0);
+	}
+	to
+	{
+		text-shadow:0 0 15px rgba(255,255,255,.75);
+	}
+}
+
+@keyframes text-white
+{
+	from
+	{
+		color:@gray;
+	}
+	to
+	{
+		color:@white;
+	}
+}
+@keyframes border-white
+{
+	from
+	{
+		border-color:rgba(255,255,255,0);
+	}
+	to
+	{
+		border-color:rgba(255,255,255,1);
+	}
+}
+
+@keyframes link-hover
+{
+	from 
+	{
+		background: none;
+		border:2px solid @gray;
+		color:@white;
+	}
+	to 
+	{
+
+		background:@white;
+		border:2px solid @white;
+		color:@black;
+	}
+}	
+
+@keyframes btt-hover
+{
+	from 
+	{
+		background: none;
+		border:1px solid @dark-gray;
+		color:@white;
+	}
+	to 
+	{
+
+		background:@white;
+		border:1px solid @white;
+		color:@black;
+	}
+}
+.transition-fade {
+	transition: 2s;
+	opacity: 1;
+  }
+  
+  html.is-animating .transition-fade {
+	opacity: 0;
+  }
+
+
+
 //--------------------------------------Structure
 html
 {
@@ -101,6 +217,52 @@ body
 	color:@white;
 }
 
+.h-line
+{
+	display:block;
+	
+	width:100%;
+	height:1px;
+
+	background: @dark-gray;
+}
+
+#loader-wrapper
+{
+	background:@black;
+	
+	width:100%;
+	height:100vh;
+
+	position: fixed;
+	z-index:900;
+
+	#loader
+	{
+		margin:0 auto;
+
+		width:100%;
+		text-align: center;
+
+		position: absolute;
+		top:calc(50% - 60px);
+		z-index:10;
+
+		.title
+		{
+			.rh-name;
+			margin:0 auto .125rem;
+		}
+		.subtitle
+		{
+			.rh-name;
+			
+			font-size:.75rem;
+			font-weight: 300;
+		}
+	}
+}
+
 #outer
 {
 	width:100%;
@@ -108,7 +270,22 @@ body
 	overflow: hidden;
 
 	position: relative;
+
+	&.top-bg
+	{
+		background-image: url('/img/top-bg.jpg');
+		background-position:top center;	
+		background-repeat:no-repeat;
+		background-size: auto;
+		.breakpoint-xl({
+			background-size: 100% auto;
+		});
+		.breakpoint-2xl({
+			background-size: 100% auto;
+		});
+	}
 }
+
 
 header
 {
@@ -124,15 +301,14 @@ header
 		line-height: 2rem;
 		.name
 		{
-
+			.rh-name;
 			padding:.5rem 0;
-
-			color:@white;
-			font-size: 1rem;	
-			font-weight: 600;
-			letter-spacing: .25rem;
-			text-decoration: none;			
-			text-transform: uppercase;
+			&:hover
+			{
+				animation-name: text-glow;
+				animation-duration: .5s;
+				animation-fill-mode: forwards;
+			}
 		}
 		ul
 		{
@@ -145,13 +321,31 @@ header
 			li
 			{
 				display: inline-block;
+				padding:0 .75rem;
 				a
 				{
-					padding:.5rem;
-					color:@white;
-					font-size: .75rem;
-					font-weight: 200;
+					padding:.5rem 0;
+					color:@gray;
+					font-size: .875rem;
+					font-weight: 400;
 					text-decoration: none;
+
+					&:hover
+					{
+						animation-name: text-glow, text-white;
+						animation-duration: .5s;
+						animation-fill-mode: forwards;
+					}
+					
+					&.current-page
+					{
+						color:@white;
+						&:hover
+						{
+							animation-name: text-glow;
+						}
+					}
+					
 				}
 			}
 		}
@@ -159,6 +353,151 @@ header
 }
 
 
+main
+{
+	.inner-container;
+}
+
+
+
+ul.breadcrumbs
+{
+	.reset-list;
+	font-size:.875rem;
+	font-weight:300;
+	margin:3rem 0 1rem;
+	li
+	{
+		display: inline-block;
+		color:@gray;
+		&:after
+		{
+			content:">";
+			display: inline-block;
+
+			margin:0 .125rem;
+
+			color:@gray;
+			font-size: .75em;
+			
+		}
+		a
+		{
+			color:@gray;
+			border-bottom:1px solid rgba(0,0,0,0);
+
+			text-decoration: none;
+
+			&:hover
+			{
+				
+				animation-name: text-white, border-white;
+				animation-duration: .5s;
+				animation-fill-mode: forwards;
+			}
+		}
+		&:last-child
+		{
+			color:@white;
+			&:after
+			{
+				content:"";
+				
+			}
+		}
+		
+	}
+}
+
+.back-to-top-wrap
+{
+	.back-to-top
+	{
+		.reset-button;
+	
+		margin:0 auto 8rem;
+		padding:.75rem 1rem .625rem;
+	
+		border:1px solid @dark-gray;
+	
+		color: @white;
+		font-size: .875rem;
+		font-weight:400;
+	
+		&:hover
+		{
+			animation-name: btt-hover;
+			animation-duration: .5s;
+			animation-fill-mode: forwards;
+		}		
+	}
+}
+
+
+footer
+{
+	.inner-container;
+	
+	//display: flex;
+	//justify-content:space-between;
+	
+	
+	
+
+	text-align: center;
+
+	.inner
+	{
+		border-top:1px solid @dark-gray;
+		padding: 3rem 0;
+	}
+
+	nav
+	{
+		flex:1;
+		ul
+		{
+			.reset-list;
+			li
+			{
+
+				a
+				{
+					color:@white;
+					text-decoration: none;
+				}
+			}
+		}
+	}
+
+
+	.name
+	{
+
+		.rh-name;
+
+		//flex:1;
+
+		&:hover
+		{
+			animation-name: text-glow;
+			animation-duration: .5s;
+			animation-fill-mode: forwards;
+		}
+	}
+
+
+	.copyright
+	{
+		//flex:1;
+		display: inline-block;
+		margin:.25rem auto;
+
+		color: @gray;
+		font-size:.75rem;
+		font-weight:100;
+	}
+}
 
 
 
@@ -177,9 +516,11 @@ header
 		h1
 		{
 			color: @white;
-			font-size: 5rem;
+			font-size: 4.5rem;
 			font-weight: 100;
 			text-align: center;
+
+			transition: .5s;
 
 			.breakpoint-xs({
 				font-size: 2.5rem;
@@ -195,6 +536,9 @@ header
 			{
 				display: block;
 				.breakpoint-xs({
+					display: inline;
+				});
+				.breakpoint-sm({
 					display: inline;
 				});
 			}
@@ -214,6 +558,11 @@ header
 	top:0;
 	z-index: -10;
 
+	.video-wrap
+	{
+		position: relative;
+		width: 100%;
+	}
 	video
 	{
 		display: block;
@@ -234,13 +583,16 @@ header
 		.breakpoint-lg({
 			width:125%;	
 		});
+
+		
 		
 	}
+
 	.gradient
 	{
 		
 		width:100%;
-		padding-top:65%;
+		padding-top:50%;
 		
 		background: linear-gradient(0deg, 
 		rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
@@ -286,32 +638,16 @@ header
 		top:0;
 		z-index: 0;
 
-		animation: animNoise 10s steps(10) infinite;
+		animation: anim-noise 10s steps(10) infinite;
 		
 
 	}
-	@keyframes animNoise {
-		0%, 100% { background-position:0, 0 }
-		10% { background-position:-5%, -10% }
-		20% { background-position:-15%, 5% }
-		30% { background-position:7%, -25% }
-		40% { background-position:-5%, 25% }
-		50% { background-position:-15%, 10% }
-		60% { background-position:15%, 0% }
-		70% { background-position:0%, 15% }
-		80% { background-position:3%, 35% }
-		90% { background-position:-10%, 10% }
-	 }
 	
 }
 
-
-
-
-
-main
+#home-container
 {
-	.inner-container;
+	
 	h2
 	{
 		padding:3rem 0 0;
@@ -370,10 +706,6 @@ main
 
 	}
 	
-
-
-
-
 	.inner
 	{
 		display: flex;
@@ -456,8 +788,18 @@ main
 							padding:0 0 2rem;
 						});	
 					}
-	
+					
 					h3
+					{
+						margin:0 0 .75rem;
+						padding:0;
+						line-height: 1;
+	
+						color:@gray;
+						font-size:1rem;
+						font-weight: 200;
+					}
+					h4
 					{
 						max-width:640px;
 						margin:0 0 1rem;
@@ -475,25 +817,16 @@ main
 						});
 						
 					}
-					h4
-					{
-						margin:0 0 .25rem;
-						padding:0;
-						line-height: 1;
-	
-						color:@gray;
-						font-size:.75rem;
-						font-weight: 700;
-					}
-					p
+					h5
 					{
 						margin:0 0 2.5rem;
 						padding:0;
 						line-height: 1;
 	
 						color:@gray;
-						font-size:1rem;
-						font-weight: 200;
+						font-size:.75rem;
+						font-weight: 700;
+						
 
 						.breakpoint-xs({
 							margin:0 0 1.5rem;
@@ -525,22 +858,6 @@ main
   							animation-duration: .5s;
 							animation-fill-mode: forwards;
 						}		
-						@keyframes link-hover
-						{
-							from 
-							{
-								background: none;
-								border:2px solid @gray;
-								color:@white;
-							}
-							to 
-							{
-
-								background:@white;
-								border:2px solid @white;
-								color:@black;
-							}
-						}	
 									
 					}
 				}
@@ -561,96 +878,114 @@ main
 
 
 
-.back-to-top-wrap
+//--------------------------------------Cases
+
+
+#case-container
 {
-	.back-to-top
+	.h-line
 	{
-		.reset-button;
-	
-		margin:0 auto 8rem;
-		padding:.75rem 1rem .625rem;
-	
-		border:1px solid @dark-gray;
-	
-		color: @white;
-		font-weight:700;
-	
-		&:hover
-		{
-			animation-name: btt-hover;
-			animation-duration: .5s;
-			animation-fill-mode: forwards;
-		}		
-		@keyframes btt-hover
-		{
-			from 
-			{
-				background: none;
-				border:1px solid @dark-gray;
-				color:@white;
-			}
-			to 
-			{
-	
-				background:@white;
-				border:1px solid @white;
-				color:@black;
-			}
-		}
+		margin:3rem auto;
 	}
-}
-
-
-
-
-footer
-{
-	.inner-container;
-	
-	display: flex;
-	justify-content:space-between;
-	padding: 3rem 24px;
-	
-	border-top:1px solid @dark-gray;
-	
-	
-
-	nav
+	.inner
 	{
-		flex:1;
-		ul
+		margin:0 auto 3rem;
+	}
+	.case-kv
+	{
+		margin:0 auto 3rem;
+		
+	}
+	.case-text
+	{
+		max-width:1280px;
+		margin:0 auto;
+		padding:2rem 0;
+		
+		
+		ol
 		{
-			.reset-list;
+			padding:0 12px;
 			li
 			{
-
+				padding:0;
+				color:@gray;
+				font-size:.5rem;
 				a
 				{
+					display: inline-block;
+					
+					margin:.125rem 8px;
+
 					color:@white;
+					font-size:1rem;
 					text-decoration: none;
+					&:hover
+					{
+						color:@gray;
+					}
 				}
 			}
 		}
 	}
-
-
-	.name
+	.case-img
 	{
+		max-width: 1280px;
+		margin:0 auto 1rem;
+	}
+	h1
+	{
+		margin:0 0 .75rem;
+		padding:0;
+		line-height: 1;
 
-		color:@white;
-		font-size: 1rem;	
-		font-weight: 600;
-		letter-spacing: .25rem;
-		text-align: center;
-		text-decoration: none;			
-		text-transform: uppercase;
+		color:@gray;
+		font-size:1rem;
+		font-weight: 200;
+	}
+	h2
+	{
+		margin:0 0 1rem;
+		padding:0;
+		line-height: 1;
 
-		flex:1;
+		font-size:3rem;
+		font-weight: 200;
+
+		.breakpoint-xs({
+			font-size:2rem;
+		});
+		.breakpoint-sm({
+			font-size:2.5rem;
+		});
+		
+	}
+	h3
+	{
+		padding:0;
+		line-height: 1;
+
+		color:@gray;
+		font-size:.75rem;
+		font-weight: 700;
 	}
 
-
-	.copyright
+	h4
 	{
-		flex:1;
+		margin:0 0 .5rem;
+		line-height: 1;
+
+		color:@gray;
+		font-size:.75rem;
+		font-weight: 700;
+	}
+
+	p
+	{
+		margin:0;
+
+		font-size:1.25rem;
+		font-weight:200;
+		line-height: 1.5;
 	}
 }
