--- a/css/style.less
+++ b/css/style.less
@@ -1199,8 +1199,11 @@ footer
 	}
 	h6
 	{
-		margin:0 0 .5rem;
-		font-size: .75rem;
+		display: inline-block;
+		padding:0 0 0.25rem;
+		margin:0 0 .75rem;
+		border-bottom:1px solid @white;
+		font-size: 1rem;
 	}
 
 	p
