--- a/css/style.css
+++ b/css/style.css
@@ -1110,3 +1110,37 @@ button.close-overlay img {
   color: #333333;
   font-size: 0.875rem;
 }
+video {
+  /* override other styles to make responsive
+	width: 100%    !important;*/
+  height: auto   !important;
+}
+video.center-vid {
+  width: 100% !important;
+}
+.video-wrapper {
+  margin: 0 auto 1rem;
+}
+.video-wrapper video {
+  display: block;
+  max-width: 100%;
+  margin: 0 auto;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
+}
+.youtube-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 0;
+  height: 0;
+  overflow: hidden;
+  margin: 0 auto 1rem;
+}
+.youtube-container iframe,
+.video-container object,
+.video-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
