--- a/css/style.css
+++ b/css/style.css
@@ -1144,3 +1144,65 @@ video.center-vid {
   width: 100%;
   height: 100%;
 }
+ul.work-gallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 0;
+  margin: 0 auto;
+  list-style: none;
+  list-style-position: inside;
+}
+ul.work-gallery > li {
+  display: block;
+  position: relative;
+  box-sizing: border-box;
+  flex-grow: 0;
+  margin: 10px;
+  width: calc(33.33% - 20px);
+  overflow: hidden;
+  border-radius: 5px;
+}
+@media (max-width: 480px) {
+  ul.work-gallery > li {
+    width: calc(100% - 20px);
+  }
+}
+@media (min-width: 481px) and (max-width: 768px) {
+  ul.work-gallery > li {
+    width: calc(50% - 20px);
+  }
+}
+ul.work-gallery > li .work-info {
+  text-align: center;
+  position: absolute;
+  width: 100%;
+  background-color: #ffffff;
+  z-index: 5;
+  top: 50%;
+  transform: translateY(-50%);
+  padding: 50% 0;
+  opacity: 0;
+  transition: opacity 0.5s;
+}
+ul.work-gallery > li .work-info:hover {
+  opacity: 1;
+}
+ul.work-gallery > li .work-info h2 {
+  margin: 0 auto 0.5rem;
+  padding: 0 10px;
+  color: #888888;
+  font-size: 0.75rem;
+  font-weight: 300;
+}
+ul.work-gallery > li .work-info h3 {
+  margin: 0;
+  padding: 0 10px;
+  color: #010101;
+  font-size: 1.25rem;
+  font-weight: 700;
+}
+ul.work-gallery > li img {
+  display: block;
+  width: 100%;
+}
