--- a/css/style.less
+++ b/css/style.less
@@ -344,6 +344,7 @@ header
 					font-size: .875rem;
 					font-weight: 400;
 					text-decoration: none;
+					
 
 					&:hover
 					{
@@ -1427,3 +1428,96 @@ video.center-vid
 }
 .youtube-container { position: relative; padding-bottom: 56.25%; padding-top:0; height: 0; overflow: hidden; margin:0 auto 1rem;}
 .youtube-container iframe, .video-container object, .video-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
+
+
+
+
+
+
+
+
+ul.work-gallery
+{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+
+
+	padding:0;
+	margin:0 auto;
+	list-style: none;
+	list-style-position: inside;
+	
+	& > li
+	{
+		display: block;
+		position: relative;
+
+		box-sizing: border-box;
+		flex-grow: 0;
+		margin:10px;
+		width:calc(33.33% - 20px);
+
+		overflow: hidden;
+		border-radius: 5px;
+		// border: 1px solid @dark-gray;
+
+
+		.breakpoint-xs({
+			width:calc(100% - 20px);
+		});
+		.breakpoint-sm({
+			width:calc(50% - 20px);
+		});
+
+
+		.work-info
+		{
+			text-align: center;
+			position: absolute;
+
+			width:100%;
+
+			
+			background-color: @white;
+			
+			z-index: 5;
+			top:50%;
+			transform: translateY(-50%);
+			padding:50% 0;
+
+			
+			opacity:0;
+			transition: opacity .5s;
+			&:hover
+			{
+				opacity: 1;
+			}
+
+			h2
+			{
+				margin:0 auto .5rem;
+				padding:0 10px;
+
+				color:@gray;
+				font-size: .75rem;
+				font-weight: 300;
+			}
+			h3
+			{				
+				margin:0;
+				padding:0 10px;
+
+				color:@black;
+				font-size: 1.25rem;
+				font-weight: 700;
+			}
+		}
+		img
+		{
+			display: block;
+			width: 100%;
+		}
+		
+	}
+}
